# f1-analysis

./: .gitignore  README.md  project.md  pyproject.toml
dashboard/: app.py
dashboard/pages/: 2_Driver_Comparison.py
dashboard/shared/: __init__.py  api_logging.py  constants.py  data_helpers.py  fetchers.py  formatters.py  sidebar.py
dashboard/shared/data/: __init__.py  base.py  errors.py  fastf1_repo.py  openf1_repo.py  source.py  types.py
dashboard/shared/services/: __init__.py  common.py  driver_comparison.py  driver_performance.py  stint_helpers.py
examples/: basic_usage.py  race_analysis.py
src/openf1/: __init__.py  _filters.py  _http.py  client.py  exceptions.py
src/openf1/models/: __init__.py  car_data.py  championship.py  driver.py  interval.py  lap.py  location.py  meeting.py  overtake.py  pit.py  position.py  race_control.py  session.py  session_result.py  starting_grid.py  stint.py  team_radio.py  weather.py
tests/: conftest.py  test_http.py  test_models.py
tests/dashboard/: conftest.py  test_data_layer.py  test_driver_comparison.py  test_driver_performance.py  test_logging.py  test_services_common.py  test_stint_helpers.py
tests/openf1/: test_client.py  test_filters.py
